[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/alert_background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/PopUpAlertText.gd" type="Script" id=2]

[node name="AlertImage" type="TextureRect"]
margin_right = 142.0
margin_bottom = 24.0
texture = ExtResource( 1 )
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertLable" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Picked Up: Wood x 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="Tween" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_all_completed" from="FadeOut" to="." method="_on_FadeOut_tween_all_completed"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
